--- a/en/CSS/style.css
+++ b/en/CSS/style.css
@@ -34,6 +34,29 @@ h1{
     color: brown;
 }
 
+.cv_class {
+  display: inline;
+  font-family: Roboto;
+}
+
+.btn-liink {
+  margin-right:30px;
+}
+
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+      .cv_class {
+        display: none;
+      }
+      .btn-liink {
+        margin-right:30px;
+        margin-bottom:30px; 
+      }
+    }
+
+
 .containon {
     width: 100%;
     padding: 0 7%;
