--- a/fr/CSS/style.css
+++ b/fr/CSS/style.css
@@ -34,6 +34,28 @@ h1{
     color: brown;
 }
 
+.cv_class {
+  display: inline;
+  font-family: Roboto;
+}
+
+.btn-liink {
+  margin-right:30px;
+}
+
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+      .cv_class {
+        display: none;
+      }
+      .btn-liink {
+        margin-right:30px;
+        margin-bottom:30px; 
+      }
+    }
+
 .containon {
     width: 100%;
     padding: 0 7%;
@@ -225,6 +247,7 @@ a:hover {
       left: 31px;
     }
   
+
   /* Full-width containers */
     .tcontainer {
       width: 100%;
